[package]
name = "cs_wr_in_vscode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
error-chain = "0.12"
serde_urlencoded = "0.7.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
io = "0.0.2"
base64 = "0.21.5"
#colored = "2"
